implemented socket.io and sequalize to add tables to xposed_db.

--- a/xpozed/views/index.handlebars
+++ b/xpozed/views/index.handlebars
@@ -25,9 +25,26 @@
           {{/each}}
         </ul>
       </div>
+              <form action="">
+            <input id="m" autocomplete="off" /><button>Send</button>
+            </form>
     </div>
   </div>
 </div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/index.js"></script>
+<script src="/socket.io/socket.io.js"></script>
+<script>
+
+  var socket = io()
+  console.log('its trying!')
+  $('form').submit(function(e){
+     e.preventDefault(); // prevents page reloading
+     socket.emit('chat message', $('#m').val());
+     $('#m').val('');
+     return false;
+   });
+
+
+</script> 
