--- a/xpozed/views/room.ejs
+++ b/xpozed/views/room.ejs
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Chat App</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Welcome to the Chat!</title>
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
     <script>
         const roomName = "<%= roomName %>"
     </script>
     <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
-    <script defer src="script.js"></script>
+    <script defer src="index.js"></script>
+    <style>
+        body {
+            background-color: #d3d3d3;
+        }
+    </style>
 </head>
 <body>
     <div id="message-container"></div>
