--- a/xpozed/views/html pages/Tribe Page.html
+++ b/xpozed/views/html pages/Tribe Page.html
@@ -39,6 +39,8 @@
       }
       .row.content {height:auto;} 
     }
+
+
   </style>
 </head>
 <body>
@@ -51,49 +53,70 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Logo</a>
+      <img class="Image" src="second mini logo.png">
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
       </ul>
     </div>
   </div>
+
+    
+    </script>
+  </div>
+  .<style type="text/css">
+    .html-wpsites {height:50px;background-color:#FF0000;font-family:Arial;font-size:20px;color:#000000;}
+    </style>
+    <marquee class="html-wpsites" direction="left" behavior="scroll" scrollamount="4" width="100%">Either HTML in a custom function or a plugin like Simple Hooks.
+    </marquee>
+
 </nav>
   
 <div class="container-fluid text-center">    
   <div class="row content">
     <div class="col-sm-2 sidenav">
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
+
+        <iframe src="https://open.spotify.com/embed/album/17FBoXK1NU2rvJBbzdzw0r" width="225" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+      
+      <p><a href="#"></a></p>
+      <p><a href="#"></a></p>
+      <p><a href="#"></a></p>
     </div>
     <div class="col-sm-8 text-left"> 
-      <h1>Welcome to XPOZED</h1>
+      <h1>Welcome to XPOZED</h1> 
       <p></p>
       <hr>
-      <h3>Test</h3>
-      <p>...</p>
+      <h3></h3>
+      <p></p>
+
+      
     </div>
-    <div class="col-sm-2 sidenav">
-      <div class="well">
-        <p>pic</p>
+
+
+
+
+
+    
+    <!-- <div class="col-sm-2 sidenav">
+      <div class="well"> -->
+        <p></p>
       </div>
-      <div class="well">
-        <p>pic</p>
+      <!-- <div class="well"> -->
+        <p></p>
       </div>
     </div>
   </div>
 </div>
 
 <footer class="container-fluid text-center">
-  <p>Footer </p>
+  <p> </p>
 </footer>
 
 </body>
