--- a/xpozed/views/index.ejs
+++ b/xpozed/views/index.ejs
@@ -22,7 +22,7 @@
         <div class="room-form">
             <!-- For each 'room' in the rooms object create a new div and join link -->
             <% rooms.forEach(function(room) { %>
-                <a href="/<%= room.id%>"><%= room.name %></a>
+                <a href="/rooms?room=<%= room.id %>"><%= room.name %></a>
                 <br>
             <% }) %>
             <form id="room-form" action="/api/chatrooms" method="POST">
