signup-page-to-home

--- a/xpozed/views/index.ejs
+++ b/xpozed/views/index.ejs
@@ -33,9 +33,9 @@
     </div>
    
 
-<h1>Login</h1>
-<%- message %>
-<form method="post" action="/api/login">
+<!-- <h1>Login</h1>
+<%- message %> -->
+<!-- <form method="post" action="/api/login">
   <p>
     <label>Username:</label>
     <input type="text" name="username">
@@ -47,7 +47,7 @@
   <p>
     <input type="submit" value="Login">
   </p>
-</form>
+</form> -->
 
 
 </body>
