--- a/xpozed/views/signup.ejs
+++ b/xpozed/views/signup.ejs
@@ -22,7 +22,7 @@
         <h1>Sign Up</h1>
         <div class="room-form">
             <!-- For each 'room' in the rooms object create a new div and join link -->
-            <form method="post" action="/signup">
+            <form method="post" action="/">
                 <p>
                   <label>Username:</label>
                   <input type="text" name="username">
@@ -46,7 +46,7 @@
 </head>
 
 
-<body>
+<!-- <body>
 <div class="login-page">
     <div class="form">
       <form class="register-form" method="post" action="/signup">
@@ -64,5 +64,5 @@
       </form>
     </div>
   </div>
-</body>
+</body> -->
 </html>
