--- a/xpozed/views/signup.ejs
+++ b/xpozed/views/signup.ejs
@@ -5,31 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Chat App</title>
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="/styles/loginpage.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
     <script defer src="index.js"></script>
 </head>
 
-<body>
-    <div id="container">
+<body background="/images/login-background.jpg">
+
+    <!-- <div id="container">
         <div class="logo-container" style="margin-bottom:0">
             <div class="logo">
                 <h1>XPOSED</h1>
                 <p>WELCOME TO THE OTHERSIDE</p> 
             </div>
         </div>
-        <h1>Sign Up</h1>
+        <h1>Sign Up</h1> -->
+
         <div class="room-form">
             <!-- For each 'room' in the rooms object create a new div and join link -->
-            <form method="post" action="/">
+            <form method="post" action="/" class="login-form">
                 <p>
-                  <label>Username:</label>
-                  <input type="text" name="username">
+                  <!-- <label>Username:</label> -->
+                  <input type="text" name="username" placeholder="username">
                 </p>
                 <p>
-                  <label>Password:</label>
-                  <input type="text" name="password">
+                  <!-- <label>Password:</label> -->
+                  <input type="password" name="password" placeholder="password">
                 </p>
                 <p>
                   <input type="submit" value="Login">
@@ -37,32 +40,39 @@
               </form>
         </div>
     </div>
+
+     <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
-<head>
+
+</html>
+
+<!-- <head>
     <link rel="stylesheet" type="text/css" href="loginpage.css">
 
     <script src="loginjava.js"></script>
 </head>
 
 
-<!-- <body>
+
 <div class="login-page">
     <div class="form">
-      <form class="register-form" method="post" action="/signup">
+      <form class="register-form">
         <input type="text" placeholder="name"/>
         <input type="password" placeholder="password"/>
         <input type="text" placeholder="email address"/>
         <button>create</button>
         <p class="message">Already registered? <a href="#">Sign In</a></p>
       </form>
-      <form class="login-form" method="post" action="/api/login">
+      <form class="login-form">
         <input type="text" placeholder="username"/>
         <input type="password" placeholder="password"/>
         <button>login</button>
         <p class="message">Not registered? <a href="#">Create an account</a></p>
       </form>
     </div>
-  </div>
-</body> -->
-</html>
+  </div> -->
