--- a/xpozed/public/styles/loginpage.css
+++ b/xpozed/public/styles/loginpage.css
@@ -26,7 +26,7 @@
   box-sizing: border-box;
   font-size: 14px;
 }
-.form button {
+#login-button {
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
@@ -40,7 +40,7 @@
   transition: all 0.3 ease;
   cursor: pointer;
 }
-.form button:hover,.form button:active,.form button:focus {
+#login-button:hover,#login-button:active,#login-button:focus {
   background: rgb(20, 192, 29);
 }
 .form .message {
