--- a/xpozed/views/room.ejs
+++ b/xpozed/views/room.ejs
@@ -16,7 +16,7 @@
     <script defer src="index.js"></script>
     <style>
         body {
-            background-color: #d3d3d3;
+            background-color: #000;
         }
     </style>
 </head>
